project/modules/secuirtyGroup/proxy/main.tf
resource "aws_security_group" "proxy-sg" {
  name        = "proxy-sg"
  description = "Allow inbound to proxies"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Restrict SSH access
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]    # Public web traffic
  }


  #allow all egress traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


    tags = {
    Name = "proxy-sg"
  }

}
